test/instance-checks-3.ktn
def example {a}(a -> int): ->x; x
